# ga_capstone_prjct_wanderlust

./: Dockerfile  README.md  db.sqlite3  fly.toml  pyproject.toml
main_app/: admin.py  forms.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_alter_trips_destination_ids.py  0004_alter_trips_budget_alter_trips_enddate_and_more.py  0005_remove_photos_trip_id.py  0006_rename_photourl_photos_url.py  0008_rename_trip_id_checklist_trip.py  0011_alter_trips_options_remove_trips_enddate_and_more.py  0012_alter_trips_options_trips_enddate_trips_startdate.py
main_app/static/css/: style.css
main_app/templates/: about.html  view_requests.html
main_app/templates/main_app/: destinations_confirm_delete.html  destinations_form.html  destinations_list.html  invite_users.html  trips_form.html
main_app/templates/registration/: login.html  signup.html
wanderlust/: settings.py
wanderlust/main_app/: forms.py  models.py  urls.py  views.py
wanderlust/main_app/migrations/: 0003_remove_trips_destination_ids_trips_destination_ids.py  0007_alter_checklist_trip_id.py  0009_auto_20230823_1504.py  0010_trips_accepted_users_triprequest.py
wanderlust/main_app/static/css/: style.css
wanderlust/main_app/templates/: about.html  base.html  home.html
wanderlust/main_app/templates/destination/: destinations_form.html  destinations_list.html
wanderlust/main_app/templates/main_app/: assoc_destinations.html  destinations_confirm_delete.html  destinations_detail.html  destinations_form.html  trips_detail.html  (+4 more)
wanderlust/wanderlust/: settings.py  urls.py  wsgi.py
(+3 files in other folders)
